# heatmaps

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
otc-heatmap/: .gitignore  Dockerfile  Procfile  app.py  config.py  data_fetch.py  readme.md  requirements.txt
otc-heatmap/assets/: style.css
src/heatmaps/: generator.py  heatmap_cli.py  report.py
tests/: create_fixtures.py  test_cli.py  test_percentage_calculator.py
tests/fixtures/: atm_BIR_raw.parquet  atm_KRE_raw.parquet  atm_RUN_raw.parquet  atm_percentages.json  eco_BE-Bra_raw.parquet  eco_DK-Sor_raw.parquet  eco_FR-Pue_raw.parquet  eco_percentages.json
web/: streamlit_app.py
web/.streamlit/: index.html
