[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "heatmaps"
version = "0.1.0"
description = "Generate seaborn heatmaps from tabular data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "yaspin>=3.0",
  "icoscp==0.2.2",
  "matplotlib>=3.9",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "seaborn>=0.13",
  "typer>=0.16",
]

[project.scripts]
heatmaps = "heatmaps.heatmap_cli:run"

[tool.hatch.build.targets.wheel]
packages = ["src/heatmaps"]

[tool.hatch.envs.default]
dependencies = [
  "pytest>=8.3",
  "ruff>=0.11",
]

[tool.hatch.envs.default.scripts]
lint = "ruff check src tests"
lint-fix = "ruff check --fix src tests"
format = "ruff format src tests"
test = "pytest"

[tool.ruff.lint]
extend-select = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["network: requires live SPARQL access (deselect with -m 'not network')"]
